--- a/DockingApi/appsettings.json
+++ b/DockingApi/appsettings.json
@@ -10,6 +10,6 @@
   "JWT": {
     "Key": "tothemarsandbeyond",
     "Issuer": "http://codepulse.org/",
-    "Audience": "codepulse.org"
+    "Audience": "http://localhost:3000"
   }
 }
