--- a/DockingAdminPanel/appsettings.json
+++ b/DockingAdminPanel/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "BookingAppDB": "Server=localhost;userid=root;password=password;database=DockingAppDB;" }
+  "ConnectionStrings": { "BookingAppDB": "Server=localhost;userid=root;password=password;database=LabAppDB;" }
 }
